[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "nbilyj",email = "nbilyj@k2r3p9.42mulhouse.fr"}
]
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
